# wgpugd

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE.html  LICENSE.md  NAMESPACE  README.Rmd  README.md  _pkgdown.yml  authors.html  index.html  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: pkgdown.yaml
R/: extendr-wrappers.R
articles/: benchmark.html  compare.html  index.html
reference/: index.html
src/: .gitignore  Makevars  Makevars.in  Makevars.ucrt  Makevars.win  Makevars.win.in  entrypoint.c
src/rust/: Cargo.toml
src/rust/src/: file.rs  graphics_device.rs  lib.rs  render_pipeline.rs  text.rs  util.rs
src/rust/src/shaders/: nega.wgsl  sdf_shape.wgsl  shader.wgsl  test.wgsl
tools/: configure.R
vignettes/articles/: benchmark.Rmd  compare.Rmd
