[package]
name = "wgpugd"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
extendr-api = { git = "https://github.com/yutannihilation/extendr", branch = "feature/graphics-feature-gate", features = ["graphics"] }
lyon = "0.17"
png = "0.17"
pollster = "0.2"
wgpu = "0.12"

[patch.crates-io]
libR-sys = { git = "https://github.com/extendr/libR-sys" }
