[package]
name = "wgpugd"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
extendr-api = { git = "https://github.com/yutannihilation/extendr", branch = "feature/graphics-feature-gate", features = ["graphics"] }

wgpu = { git = "https://github.com/gfx-rs/wgpu/" }
# bytemuck converts Rust data into Plain Old Data, which can be passed to WebGPU
bytemuck = { version = "1.7", features = [ "derive" ] }
# pollster is needed to use async functions in non-async functions
pollster = "0.2"

# lyon does great job on tessellation
lyon = "0.17"

# png of course generates PNG
png = "0.17"

# regex is for parsing the user-supplied filename template (e.g.
# "Rplot%03d.png") because, unfortunately, there's no such thing as sprintf() in
# Rust.
regex = "1"
once_cell = "1.9"

# fontdb and ttf-parser is needed for rendering texts.
fontdb = "0.8"
ttf-parser = "0.14.0"

# glam is needed for matrix algebra
glam = { version = "0.20", features = ["mint"] }

# mint and euclid is needed to convert between lyon and glam
mint = "0.5"
euclid = { version = "0.22", features = ["mint"] }


[patch.crates-io]
libR-sys = { git = "https://github.com/extendr/libR-sys" }
